--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 btcusd_full.csv
 btc_data_hourly.csv
 btc_data_daily.csv
+FD_btc_data_daily.csv
+FD_btc_data_hourly.csv
+FD_btc_full_data.csv
+superconductivity_train.csv
