--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ FD_btc_data_daily.csv
 FD_btc_data_hourly.csv
 FD_btc_full_data.csv
 superconductivity_train.csv
+Global_Policy_Uncertainty_Data.xlsx
+Twitter_Economic_Uncertainty.xlsx
+All_Country_Data.xlsx
