Can now aggregate data!

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ superconductivity_train.csv
 Global_Policy_Uncertainty_Data.xlsx
 Twitter_Economic_Uncertainty.xlsx
 All_Country_Data.xlsx
+agg_btc_hour.csv
