--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Global_Policy_Uncertainty_Data.xlsx
 Twitter_Economic_Uncertainty.xlsx
 All_Country_Data.xlsx
 agg_btc_hour.csv
+agg_btc_day.csv
+agg_btc_min.csv
