--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ level_btc_hour.csv
 pct_btc_hour.csv
 pct_btc_day.csv
 temp_plots
+__pycache__/investing_simulation.cpython-39.pyc
+__pycache__/data_loader.cpython-39.pyc
+__pycache__/investing_simulation.cpython-312.pyc
+__pycache__/network_definitions.cpython-39.pyc
+__pycache__/network_definitions.cpython-312.pyc
+__pycache__/investing_simulation.cpython-312.pyc
+__pycache__/investing_simulation.cpython-312.pyc
+__pycache__/network_definitions.cpython-312.pyc
